add serial e biblioteca serial

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.jl1.0.1.jar=library/jl1.0.1.jar
 file.reference.jsminim.jar=library/jsminim.jar
 file.reference.minim.jar=library/minim.jar
 file.reference.mp3spi1.9.5.jar=library/mp3spi1.9.5.jar
+file.reference.RXTXcomm.jar=C:\\Program Files\\Java\\jre1.8.0_60\\lib\\ext\\RXTXcomm.jar
 file.reference.tritonus_aos.jar=library/tritonus_aos.jar
 file.reference.tritonus_share.jar=library/tritonus_share.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.minim.jar}:\
     ${file.reference.mp3spi1.9.5.jar}:\
     ${file.reference.tritonus_aos.jar}:\
-    ${file.reference.tritonus_share.jar}
+    ${file.reference.tritonus_share.jar}:\
+    ${file.reference.RXTXcomm.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
